[tool.poetry]
name = "nezabudu-v2"
version = "0.1.0"
description = ""
authors = ["daboggg <vzinin@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.8.2"
apscheduler = "^3.10.4"
aiogram = "^3.4.1"
environs = "^10.3.0"
aiogram-dialog = "^2.1.0"
soundfile = "^0.12.1"
speechrecognition = "3.8.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
